# real-time-operation-system

./: CMakeLists.txt  README.md
demo/: custom_tasks.c  custom_tasks.h  gen_tasks.c  gen_tasks.h  main.c  sporadic_tasks.c  sporadic_tasks.h
lib/: clock.cpp  clock.h  scheduler.c  scheduler.h  task.h
